# mudrex-futures-api-trading-sdk

./: .gitignore  CHANGELOG.md  LICENSE  MULTILINGUAL.md  README.md  pyproject.toml  requirements.txt
examples/: async_trading.py  error_handling.py  quickstart.py  trading_bot.py
mudrex/: __init__.py  client.py  exceptions.py  models.py
mudrex/api/: __init__.py  assets.py  base.py  fees.py  leverage.py  orders.py  positions.py  wallet.py
tests/: test_exceptions.py  test_models.py
types/: mudrex-api.d.ts
